[gd_scene load_steps=6 format=2]

[ext_resource path="res://3 - Item and Pick Ups/enemy.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy1.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 28.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.5, 31 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 31 )

[node name="Enemy1" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="pathDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pathDetector"]
position = Vector2( 0.5, 0 )
shape = SubResource( 2 )

[node name="hitBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitBox"]
position = Vector2( 1, 0 )
shape = SubResource( 3 )

[connection signal="area_entered" from="hitBox" to="." method="_on_hitBox_area_entered"]
[connection signal="body_entered" from="hitBox" to="." method="_on_hitBox_body_entered"]
